# agent

./: .dockerignore  Dockerfile  README.md  pyproject.toml  run_agent.sh
agent/: intelligence_agent.py
api/: main.py
config/: settings.py
mcp_server/: __init__.py  server.py
mcp_server/prompts/: __init__.py
mcp_server/resources/: __init__.py  course_context.py
mcp_server/tools/: __init__.py  biometric_analytics.py  db_writer.py  face_verifier.py  plan_finalizer.py  plan_generator.py  topic_suggester.py
plugins/predictive_analytics/: __init__.py  fiftyone.yml  operators.py
