[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intelligence-agent"
version = "1.0.0"
description = "The Intelligence — Agente de Analisis Predictivo con MCP"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "fastmcp>=2.0.0",
    "openai>=1.35.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "agent", "api", "config", "broker"]
